# sounding-center-python-api

./: .env.example  .gitignore  .prettierrc  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  publish.yml  test.yml
src/soundingcenter/: SoundingCenter.py  __init__.py  test_api.py
tests/: conftest.py  test_api_as_admin.py  test_api_as_api.py  test_api_as_public.py
